--- a/public/01-entrance-d.html
+++ b/public/01-entrance-d.html
@@ -227,6 +227,13 @@
 										</div>
 										<div class="swiper-slide">
 											<a class="toggle-block__btn btn btn-outline-light" href="#">
+												<svg class="icon icon-tile ">
+													<use xlink:href="img/svg/sprite.svg#tile"></use>
+												</svg><span>Шахматка</span>
+											</a>
+										</div>
+										<div class="swiper-slide">
+											<a class="toggle-block__btn btn btn-outline-light" href="#">
 												<svg class="icon icon-tasks ">
 													<use xlink:href="img/svg/sprite.svg#tasks"></use>
 												</svg><span>Задачи</span>
