--- a/public/01-notes-d.html
+++ b/public/01-notes-d.html
@@ -425,7 +425,7 @@
 									<div class="note-block__head">
 										<div class="row" style="--bs-gutter-x:12px">
 											<div class="col-auto">
-												<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff">МИ</div>
+												<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff"> <span>МИ</span></div>
 											</div>
 											<div class="col">
 												<div class="note-block__input-wrap">
@@ -450,7 +450,8 @@
 										<div class="note-block__item">
 											<div class="row align-items-center mb-3" style="--bs-gutter-x:12px">
 												<div class="col-auto">
-													<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff">АИ</div>
+													<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff"> <span>АИ</span><img src="img/avatar.jpg" alt="" loading="lazy"/>
+													</div>
 												</div>
 												<div class="col"><strong class="me-2">Антон Иванов</strong><span class="text-secondary">23 дек 23, 18:59</span></div>
 											</div>
@@ -470,7 +471,7 @@
 										<div class="note-block__item">
 											<div class="row align-items-center mb-3" style="--bs-gutter-x:12px">
 												<div class="col-auto">
-													<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff">АИ</div>
+													<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff"> <span>АИ</span></div>
 												</div>
 												<div class="col"><strong class="me-2">Антон Иванов</strong><span class="text-secondary">23 дек 23, 18:59</span></div>
 											</div>
@@ -490,7 +491,7 @@
 										<div class="note-block__item">
 											<div class="row align-items-center mb-3" style="--bs-gutter-x:12px">
 												<div class="col-auto">
-													<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff">АИ</div>
+													<div class="avatar-block avatar-block--sm" style="background: #467CF4; color: #fff"> <span>АИ</span></div>
 												</div>
 												<div class="col"><strong class="me-2">Антон Иванов</strong><span class="text-secondary">23 дек 23, 18:59</span></div>
 											</div>
