--- a/public/02-edit-room.html
+++ b/public/02-edit-room.html
@@ -52,7 +52,7 @@
 											<p class="row"><span class="col">Площадь стен</span><span class="col-auto">324</span></p>
 											<p class="row"><span class="col">Площадь потолка</span><span class="col-auto">322</span></p>
 											<p class="row"><span class="col">Площадь пола</span><span class="col-auto">322</span></p>
-											<a class="plan-block__edit" href="./react-planner/demo/dist/index.html" target="_blank">Редактировать
+											<a class="plan-block__edit" href="./react-planner/demo/dist/index.html" target="_blank">Редактировать чертеж
 												<svg class="icon icon-edit ">
 													<use xlink:href="img/svg/sprite.svg#edit"></use>
 												</svg>
@@ -107,14 +107,14 @@
 							<div class="col-12">
 								<div class="sCreateObject__btn-row row">
 									<div class="col-auto">
-										<a class="sCreateObject__control-btn btn btn-light" href="#">
+										<a class="sCreateObject__control-btn btn btn-light" href="#" data-bs-toggle="tooltip2" data-bs-placement="top" title="Дублировать">
 											<svg class="icon icon-copy ">
 												<use xlink:href="img/svg/sprite.svg#copy"></use>
 											</svg>
 										</a>
 									</div>
 									<div class="col-auto">
-										<a class="sCreateObject__control-btn sCreateObject__control-btn--delete btn btn-light" href="#">
+										<a class="sCreateObject__control-btn sCreateObject__control-btn--delete btn btn-light" href="#" data-bs-toggle="tooltip2" data-bs-placement="top" title="Удалить">
 											<svg class="icon icon-delete ">
 												<use xlink:href="img/svg/sprite.svg#delete"></use>
 											</svg>
