--- a/public/02-edit-task-d.html
+++ b/public/02-edit-task-d.html
@@ -85,13 +85,11 @@
 						<div class="sCreateObject__row row">
 							<div class="col-12">
 								<div class="sCreateObject__item">
-									<p>Статус проекта</p>
+									<p>Статус задачи</p>
 									<div class="select-status">
 										<select class="custom-select--js">
 											<option data-img="img/svg/play.svg">В работе</option>
-											<option data-img="img/svg/done.svg">Планирование</option>
 											<option data-img="img/svg/time.svg">Завершен</option>
-											<option data-img="img/svg/archive.svg">Архив</option>
 										</select>
 									</div>
 								</div>
@@ -152,14 +150,14 @@
 							<div class="col-12">
 								<div class="sCreateObject__btn-row row">
 									<div class="col-auto">
-										<a class="sCreateObject__control-btn btn btn-light" href="#">
+										<a class="sCreateObject__control-btn btn btn-light" href="#" data-bs-toggle="tooltip2" data-bs-placement="top" title="Дублировать">
 											<svg class="icon icon-copy ">
 												<use xlink:href="img/svg/sprite.svg#copy"></use>
 											</svg>
 										</a>
 									</div>
 									<div class="col-auto">
-										<a class="sCreateObject__control-btn sCreateObject__control-btn--delete btn btn-light" href="#">
+										<a class="sCreateObject__control-btn sCreateObject__control-btn--delete btn btn-light" href="#" data-bs-toggle="tooltip2" data-bs-placement="top" title="Удалить">
 											<svg class="icon icon-delete ">
 												<use xlink:href="img/svg/sprite.svg#delete"></use>
 											</svg>
