--- a/public/02-create-task-d.html
+++ b/public/02-create-task-d.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Создание объекта</title>
+		<title>Создание задачи</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -31,7 +31,7 @@
 			<div class="sCreateObject" id="sCreateObject">
 				<div class="sCreateObject__body">
 					<div class="sCreateObject__left-side">
-						<h2>1. Натяжка потолка</h2>
+						<h2>Создание задачи</h2>
 						<div class="form-wrap">
 							<div class="form-wrap__main-row row">
 								<div class="col-12">
@@ -75,13 +75,11 @@
 						<div class="sCreateObject__row row">
 							<div class="col-12">
 								<div class="sCreateObject__item">
-									<p>Статус проекта</p>
+									<p>Создание задачи</p>
 									<div class="select-status">
 										<select class="custom-select--js">
 											<option data-img="img/svg/play.svg">В работе</option>
-											<option data-img="img/svg/done.svg">Планирование</option>
 											<option data-img="img/svg/time.svg">Завершен</option>
-											<option data-img="img/svg/archive.svg">Архив</option>
 										</select>
 									</div>
 								</div>
