--- a/public/02-edit-object-d.html
+++ b/public/02-edit-object-d.html
@@ -56,7 +56,9 @@
 									<div class="select-status">
 										<select class="custom-select--js">
 											<option data-img="img/svg/play.svg">В работе</option>
+											<option data-img="img/svg/done.svg">Планирование</option>
 											<option data-img="img/svg/time.svg">Завершен</option>
+											<option data-img="img/svg/archive.svg">Архив</option>
 										</select>
 									</div>
 								</div>
