add 03-task-d page

--- a/public/01-house-d.html
+++ b/public/01-house-d.html
@@ -79,7 +79,7 @@
 										</ol>
 									</nav>
 								</div>
-								<div class="page-head__col col-lg order-md-4">
+								<div class="page-head__col page-head__col--title col-lg order-md-4">
 									<h1>Дом №1
 										<div class="badge badge-primary">33%</div>
 									</h1>
