--- a/public/03-task-d.html
+++ b/public/03-task-d.html
@@ -70,149 +70,46 @@
 								<div class="col">
 									<nav class="swiper freeMode-slider--js" aria-label="breadcrumb">
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Объекты</span>
+											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Задачи</span>
 													<meta itemprop="position" content="1"/></a></li>
-											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">ЖК видный</span>
-													<meta itemprop="position" content="2"/></a></li>
-											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Дом №1</span>
-													<meta itemprop="position" content="3"/></a></li>
-											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Подъезд №2</span>
-													<meta itemprop="position" content="4"/></a></li>
-											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Этаж №2</span>
-													<meta itemprop="position" content="5"/></a></li>
-											<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Квартира №32</span>
-													<meta itemprop="position" content="6"/></a></li>
-											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">Кухня №1</span>
-													<meta itemprop="position" content="7"/></a></li>
 										</ol>
 									</nav>
 								</div>
 								<div class="page-head__col page-head__col--title col-lg order-md-4">
 									<h1>Кухня
-										<div class="badge badge-primary">33%</div>
 									</h1>
-									<div class="page-head__sample">
-										<svg class="icon icon-check2 ">
-											<use xlink:href="img/svg/sprite.svg#check2"></use>
-										</svg>Замеры
-									</div>
-								</div>
-								<div class="col-12 d-none d-md-block m-0 p-0 order-md-3"></div>
-								<div class="page-head__col col-md-auto order-md-2">
-									<a class="page-head__edit" href="#">Редактировать
-										<svg class="icon icon-edit ">
-											<use xlink:href="img/svg/sprite.svg#edit"></use>
-										</svg>
-									</a>
-								</div>
-								<div class="page-head__col col-md-auto order-md-last">
-									<div class="startDate">
-										<svg class="icon icon-calendar ">
-											<use xlink:href="img/svg/sprite.svg#calendar"></use>
-										</svg>11 ноя 23 – 11 фев 24
-									</div>
-								</div>
-								<div class="page-head__col col-md-auto order-md-5">
 									<div class="task-stat">
 										<svg class="icon icon-fist ">
 											<use xlink:href="img/svg/sprite.svg#fist"></use>
-										</svg>321/433
+										</svg>323
 									</div>
 								</div>
+								<div class="col-12 d-none d-md-block m-0 p-0 order-md-3"></div>
 							</div>
 						</div>
 					</div>
-					<!-- start sObjectDetails-->
-					<div class="sObjectDetails section" id="sObjectDetails">
-						<div class="container-fluid">
-							<div class="sObjectDetails__header">
-								<div class="details-with-toggle details-with-toggle--js">
-									<div class="details-with-toggle__wrap">
-										<div class="details-with-toggle__stats-row details-with-toggle__stats-row--without-span row">
-											<div class="details-with-toggle__col col-md-auto">
-												<div class="details-with-toggle__item"><span>Этаж</span>
-													<p>7 эт
-													</p>
-												</div>
-											</div>
-											<div class="details-with-toggle__col col-md-auto">
-												<div class="details-with-toggle__item"><span>Квартиры</span>
-													<p>728 кв
-													</p>
-												</div>
-											</div>
-											<div class="details-with-toggle__col col-md-auto">
-												<div class="details-with-toggle__item"><span>Помещения</span>
-													<p>1350 пом
-													</p>
-												</div>
-											</div>
-											<div class="details-with-toggle__col col-md-auto">
-												<div class="details-with-toggle__item"><span>Площадь</span>
-													<p>S 3440 м²
-													</p>
-												</div>
-											</div>
-										</div>
-									</div>
-									<button class="details-with-toggle__btn-more btn d-md-none">
-										<div class="show">Подробнее</div>
-										<div class="hide">Свернуть</div>
-										<svg class="icon icon-chevron-down ">
-											<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-										</svg>
-									</button>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end sObjectDetails-->
 					<!-- start sMainInfo-->
 					<div class="sMainInfo section" id="sMainInfo">
 						<div class="container-fluid">
-							<div class="sMainInfo__wrap">
-								<div class="toggle-block swiper freeMode-slider freeMode-slider--js">
-									<div class="swiper-wrapper">
-										<div class="swiper-slide">
-											<a class="toggle-block__btn btn btn-outline-light active" href="#">
-												<svg class="icon icon-list ">
-													<use xlink:href="img/svg/sprite.svg#list"></use>
-												</svg><span>Список</span>
-											</a>
-										</div>
-										<div class="swiper-slide">
-											<a class="toggle-block__btn btn btn-outline-light" href="#">
-												<svg class="icon icon-tasks ">
-													<use xlink:href="img/svg/sprite.svg#tasks"></use>
-												</svg><span>Задачи</span>
-											</a>
-										</div>
-										<div class="swiper-slide">
-											<a class="toggle-block__btn btn btn-outline-light" href="#">
-												<svg class="icon icon-gantt ">
-													<use xlink:href="img/svg/sprite.svg#gantt"></use>
-												</svg><span>График работ</span>
-											</a>
-										</div>
-										<div class="swiper-slide">
-											<a class="toggle-block__btn btn btn-outline-light" href="#">
-												<svg class="icon icon-info ">
-													<use xlink:href="img/svg/sprite.svg#info"></use>
-												</svg><span>Информация</span>
-											</a>
-										</div>
-										<div class="swiper-slide">
-											<a class="toggle-block__btn btn btn-outline-light" href="#">
-												<svg class="icon icon-pen ">
-													<use xlink:href="img/svg/sprite.svg#pen"></use>
-												</svg><span>Заметки</span>
-											</a>
-										</div>
-									</div>
-								</div>
-							</div>
 							<div class="sMainInfo__selects-wrap">
 								<div class="row">
+									<div class="sMainInfo__col col-md col-xl-3">
+										<div class="custom-select-wrap custom-select-wrap--third-type">
+											<select class="basic-select basic-select--js">
+												<option>Все объекты</option>
+												<option>1</option>
+												<option>2</option>
+												<option>3</option>
+												<option>4</option>
+												<option>5</option>
+												<option>6</option>
+												<option>7</option>
+												<option>8</option>
+												<option>9</option>
+												<option>10</option>
+											</select>
+										</div>
+									</div>
 									<div class="sMainInfo__col col-md col-xl-3">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
@@ -282,11 +179,12 @@
 									</div>
 								</div>
 							</div>
-							<div class="main-table main-table--2">
+							<div class="main-table main-table--2 main-table--object">
 								<table>
 									<thead>
 										<tr>
 											<th>Задача</th>
+											<th>Объект</th>
 											<th>Поверхность</th>
 											<th>Бригада</th>
 											<th>Площадь</th>
@@ -299,7 +197,7 @@
 												<a class="main-table__add-new" href="#">
 													<svg class="icon icon-add ">
 														<use xlink:href="img/svg/sprite.svg#add"></use>
-													</svg>Добавить дом
+													</svg>Добавить задачу
 												</a>
 											</td>
 										</tr>
@@ -308,9 +206,15 @@
 												<div class="main-table__title">
 													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 													</label>
-													<div class="badge badge-primary">В работе </div><a href="#">1. Натяжка потолка</a>
+													<div class="badge badge-primary">В работе </div>
+													<div class="main-table__more-info" data-bs-toggle="tooltip3" data-bs-placement="top" title="ЖК Династия Парк / Дом №1 / Подъезд №1 / Этаж №2 / Квартира №2 / Кухня">
+														<svg class="icon icon-info2 ">
+															<use xlink:href="img/svg/sprite.svg#info2"></use>
+														</svg>
+													</div><a href="#">1. Натяжка потолка</a>
 												</div>
 											</td>
+											<td>ЖК Династия Парк</td>
 											<td>Потолок</td>
 											<td>Бригада №3</td>
 											<td>1300 м²</td>
@@ -321,9 +225,15 @@
 												<div class="main-table__title">
 													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 													</label>
-													<div class="badge badge-success">Завершен</div><a href="#">2. Шпаклевка стен</a>
+													<div class="badge badge-success">Завершен</div>
+													<div class="main-table__more-info" data-bs-toggle="tooltip3" data-bs-placement="top" title="ЖК Династия Парк / Дом №1 / Подъезд №1 / Этаж №2 / Квартира №2 / Кухня">
+														<svg class="icon icon-info2 ">
+															<use xlink:href="img/svg/sprite.svg#info2"></use>
+														</svg>
+													</div><a href="#">2. Шпаклевка стен</a>
 												</div>
 											</td>
+											<td>ЖК Династия Парк</td>
 											<td>Пол</td>
 											<td>Бригада №3</td>
 											<td>1300 м²</td>
@@ -334,9 +244,15 @@
 												<div class="main-table__title">
 													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 													</label>
-													<div class="badge badge-primary">В работе </div><a href="#">3. Заливка полов</a>
+													<div class="badge badge-primary">В работе </div>
+													<div class="main-table__more-info" data-bs-toggle="tooltip3" data-bs-placement="top" title="ЖК Династия Парк / Дом №1 / Подъезд №1 / Этаж №2 / Квартира №2 / Кухня">
+														<svg class="icon icon-info2 ">
+															<use xlink:href="img/svg/sprite.svg#info2"></use>
+														</svg>
+													</div><a href="#">3. Заливка полов</a>
 												</div>
 											</td>
+											<td>ЖК Династия Парк</td>
 											<td>Стены</td>
 											<td>Бригада №3</td>
 											<td>1300 м²</td>
@@ -347,9 +263,15 @@
 												<div class="main-table__title">
 													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 													</label>
-													<div class="badge badge-primary">В работе </div><a href="#">4. Штукатурка стен</a>
+													<div class="badge badge-primary">В работе </div>
+													<div class="main-table__more-info" data-bs-toggle="tooltip3" data-bs-placement="top" title="ЖК Династия Парк / Дом №1 / Подъезд №1 / Этаж №2 / Квартира №2 / Кухня">
+														<svg class="icon icon-info2 ">
+															<use xlink:href="img/svg/sprite.svg#info2"></use>
+														</svg>
+													</div><a href="#">4. Штукатурка стен</a>
 												</div>
 											</td>
+											<td>ЖК Династия Парк</td>
 											<td>Стены</td>
 											<td>Бригада №3</td>
 											<td>1300 м²</td>
@@ -364,9 +286,15 @@
 												<div class="main-table__title">
 													<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox"/>
 													</label>
-													<div class="badge badge-primary">В работе </div><a href="#">5. Заливка</a>
+													<div class="badge badge-primary">В работе </div>
+													<div class="main-table__more-info" data-bs-toggle="tooltip3" data-bs-placement="top" title="ЖК Династия Парк / Дом №1 / Подъезд №1 / Этаж №2 / Квартира №2 / Кухня">
+														<svg class="icon icon-info2 ">
+															<use xlink:href="img/svg/sprite.svg#info2"></use>
+														</svg>
+													</div><a href="#">5. Заливка</a>
 												</div>
 											</td>
+											<td>ЖК Династия Парк</td>
 											<td>Потолок</td>
 											<td>Бригада №3</td>
 											<td>1300 м²</td>
