--- a/public/01-entrance-d.html
+++ b/public/01-entrance-d.html
@@ -81,7 +81,7 @@
 										</ol>
 									</nav>
 								</div>
-								<div class="page-head__col col-lg order-md-4">
+								<div class="page-head__col page-head__col--title col-lg order-md-4">
 									<h1>Подъезд №2
 										<div class="badge badge-primary">33%</div>
 									</h1>
