--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
 										</ol>
 									</nav>
 								</div>
-								<div class="page-head__col col-lg order-md-4">
+								<div class="page-head__col page-head__col--title col-lg order-md-4">
 									<h1>Объекты
 									</h1>
 								</div>
