--- a/public/03-task-d.html
+++ b/public/03-task-d.html
@@ -25,7 +25,7 @@
 			}
 		</script>
 	</head>
-	<body class="room-page page-with-control-bar" data-bg="01-3-house.jpg">
+	<body class="page-with-control-bar" data-bg="01-3-house.jpg">
 		<div class="main-wrapper">
 			<aside> 
 				<div class="aside-wrap">
@@ -193,7 +193,7 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td class="add-more" colspan="5">
+											<td class="add-more" colspan="6">
 												<a class="main-table__add-new" href="#">
 													<svg class="icon icon-add ">
 														<use xlink:href="img/svg/sprite.svg#add"></use>
