--- a/public/05-user.html
+++ b/public/05-user.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Бригады</title>
+		<title>Пользователи</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -70,14 +70,19 @@
 								<div class="col">
 									<nav class="swiper freeMode-slider--js" aria-label="breadcrumb">
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Бригады</span>
+											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Пользователи</span>
 													<meta itemprop="position" content="1"/></a></li>
 										</ol>
 									</nav>
 								</div>
 								<div class="page-head__col page-head__col--title col-lg order-md-4">
-									<h1>Бригады
+									<h1>Пользователи
 									</h1>
+									<div class="task-stat">
+										<svg class="icon icon-members ">
+											<use xlink:href="img/svg/sprite.svg#members"></use>
+										</svg>4
+									</div>
 								</div>
 								<div class="col-12 d-none d-md-block m-0 p-0 order-md-3"></div>
 							</div>
@@ -91,7 +96,7 @@
 									<div class="sMainInfo__col col-md col-xl-3">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
-												<option>Все объекты</option>
+												<option>Все пользователи</option>
 												<option>1</option>
 												<option>2</option>
 												<option>3</option>
@@ -111,85 +116,56 @@
 									</div>
 								</div>
 							</div>
-							<div class="main-table main-table--teams">
+							<div class="main-table main-table--users">
 								<table>
 									<thead>
 										<tr>
-											<th>Наименование</th>
-											<th>Работы</th>
-											<th>Задачи</th>
-											<th>Работники</th>
+											<th>Пользователь</th>
+											<th>Роль</th>
+											<th>Email</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr>
-											<td class="add-more" colspan="4">
+											<td class="add-more" colspan="3">
 												<a class="main-table__add-new" href="#">
 													<svg class="icon icon-add ">
 														<use xlink:href="img/svg/sprite.svg#add"></use>
-													</svg>Добавить бригаду
+													</svg>Добавить пользователя
 												</a>
 											</td>
 										</tr>
 												<tr>
 													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Бригада №1</a>
+														<div class="main-table__title"><a class="h3" href="#">Иванов И. C.</a>
 														</div>
 													</td>
-													<td>Натяжка потолков, Заливка полов</td>
-													<td>
-														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
-														</div>
-													</td>
-													<td> 
-														<div class="main-table__members"><img src="img/svg/members.svg" alt="" loading="lazy"/>6
-														</div>
-													</td>
+													<td>Администратор</td>
+													<td><a href="mailto:ivanov@lpsplus.ru">ivanov@lpsplus.ru</a></td>
 												</tr>
 												<tr>
 													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Бригада №2</a>
+														<div class="main-table__title"><a class="h3" href="#">Максимов И. C.</a>
 														</div>
 													</td>
-													<td>Натяжка потолков, Заливка полов</td>
-													<td>
-														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
-														</div>
-													</td>
-													<td> 
-														<div class="main-table__members"><img src="img/svg/members.svg" alt="" loading="lazy"/>6
-														</div>
-													</td>
+													<td>Замерщик</td>
+													<td><a href="mailto:maksimov@gmail.com">maksimov@gmail.com</a></td>
 												</tr>
 												<tr>
 													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Бригада №1</a>
+														<div class="main-table__title"><a class="h3" href="#">Иванов И. C.</a>
 														</div>
 													</td>
-													<td>Натяжка потолков, Заливка полов</td>
-													<td>
-														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
-														</div>
-													</td>
-													<td> 
-														<div class="main-table__members"><img src="img/svg/members.svg" alt="" loading="lazy"/>6
-														</div>
-													</td>
+													<td>Администратор</td>
+													<td><a href="mailto:ivanov@lpsplus.ru">ivanov@lpsplus.ru</a></td>
 												</tr>
 												<tr>
 													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Бригада №2</a>
+														<div class="main-table__title"><a class="h3" href="#">Максимов И. C.</a>
 														</div>
 													</td>
-													<td>Натяжка потолков, Заливка полов</td>
-													<td>
-														<div class="main-table__goals"><img src="img/svg/fist.svg" alt="" loading="lazy"/><span>81</span>/441
-														</div>
-													</td>
-													<td> 
-														<div class="main-table__members"><img src="img/svg/members.svg" alt="" loading="lazy"/>6
-														</div>
-													</td>
+													<td>Замерщик</td>
+													<td><a href="mailto:maksimov@gmail.com">maksimov@gmail.com</a></td>
 												</tr>
 									</tbody>
 								</table>
