--- a/public/06-works.html
+++ b/public/06-works.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 	<head>
 		<meta charset="utf-8">
-		<title>Пользователи</title>
+		<title>Работы</title>
 		<meta name="description" content="о чем страница">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
@@ -70,19 +70,14 @@
 								<div class="col">
 									<nav class="swiper freeMode-slider--js" aria-label="breadcrumb">
 										<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
-											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Пользователи</span>
+											<li class="breadcrumb-item active swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Работы</span>
 													<meta itemprop="position" content="1"/></a></li>
 										</ol>
 									</nav>
 								</div>
 								<div class="page-head__col page-head__col--title col-lg order-md-4">
-									<h1>Пользователи
+									<h1>Работы
 									</h1>
-									<div class="task-stat">
-										<svg class="icon icon-members ">
-											<use xlink:href="img/svg/sprite.svg#members"></use>
-										</svg>4
-									</div>
 								</div>
 								<div class="col-12 d-none d-md-block m-0 p-0 order-md-3"></div>
 							</div>
@@ -96,7 +91,7 @@
 									<div class="sMainInfo__col col-md col-xl-3">
 										<div class="custom-select-wrap custom-select-wrap--third-type">
 											<select class="basic-select basic-select--js">
-												<option>Все пользователи</option>
+												<option>Все работы</option>
 												<option>1</option>
 												<option>2</option>
 												<option>3</option>
@@ -116,68 +111,44 @@
 									</div>
 								</div>
 							</div>
-							<div class="main-table main-table--users">
+							<div class="main-table main-table--works">
 								<table>
 									<thead>
 										<tr>
-											<th>Пользователь</th>
-											<th>Роль</th>
-											<th>Email</th>
+											<th>Наименование работы</th>
+											<th>Поверхность</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr>
-											<td class="add-more" colspan="3">
+											<td class="add-more" colspan="2">
 												<a class="main-table__add-new" href="#">
 													<svg class="icon icon-add ">
 														<use xlink:href="img/svg/sprite.svg#add"></use>
-													</svg>Добавить пользователя
+													</svg>Добавить работу
 												</a>
 											</td>
 										</tr>
 												<tr>
 													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Иванов И. C.</a>
+														<div class="main-table__title"><a class="h3" href="#">Заливка пола</a>
 														</div>
 													</td>
-													<td>Администратор</td>
-													<td>
-														<a class="main-table__email" href="mailto:ivanov@lpsplus.ru">ivanov@lpsplus.ru
-														</a>
-													</td>
+													<td>Пол</td>
 												</tr>
 												<tr>
 													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Максимов И. C.</a>
+														<div class="main-table__title"><a class="h3" href="#">Натяжка потолка</a>
 														</div>
 													</td>
-													<td>Замерщик</td>
-													<td>
-														<a class="main-table__email" href="mailto:maksimov@gmail.com">maksimov@gmail.com
-														</a>
-													</td>
+													<td>Стена</td>
 												</tr>
 												<tr>
 													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Иванов И. C.</a>
+														<div class="main-table__title"><a class="h3" href="#">Штукатурка стен</a>
 														</div>
 													</td>
-													<td>Администратор</td>
-													<td>
-														<a class="main-table__email" href="mailto:ivanov@lpsplus.ru">ivanov@lpsplus.ru
-														</a>
-													</td>
-												</tr>
-												<tr>
-													<td> 
-														<div class="main-table__title"><a class="h3" href="#">Максимов И. C.</a>
-														</div>
-													</td>
-													<td>Замерщик</td>
-													<td>
-														<a class="main-table__email" href="mailto:maksimov@gmail.com">maksimov@gmail.com
-														</a>
-													</td>
+													<td>Потолок</td>
 												</tr>
 									</tbody>
 								</table>
