--- a/public/00-modal.html
+++ b/public/00-modal.html
@@ -68,7 +68,10 @@
 						<h1>Страница для  демонстрации модальных окон</h1>
 						<div class="row">
 														<div class="col-auto mb-2">
-															<button class="btn btn-primary btn-modal-js" data-src="#modal-call" data-fancybox>modal-call</button>
+															<button class="btn btn-primary btn-modal-js" data-src="#modal-delete" data-fancybox>modal-delete</button>
+														</div>
+														<div class="col-auto mb-2">
+															<button class="btn btn-primary btn-modal-js" data-src="#modal-dublicate" data-fancybox>modal-dublicate</button>
 														</div>
 						</div>
 					</div>
