--- a/public/parts/footer.html
+++ b/public/parts/footer.html
@@ -10,27 +10,64 @@
 	</div>
 </footer>
 <!--  start modals-->
-<div id="modal-call" style="display: none">
+<div id="modal-delete" style="display: none">
 	<div class="modal-win">
-		<div class="form-wrap">
-			<form>
-				<div class="text-center">
-					<div class="form-wrap__title form-data h3 ttu">Обратный звонок
-					</div>
-					<p class="after-headline">Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течение 15&nbsp;минут</p>
-				</div>
-				<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" name="text" type="text" placeholder="Ваше Имя" required="required"/> 
-				</div>
-				<!-- +e.input-wrap-->
-				<button class="form-wrap__btn btn" type="submit"> 
-				</button>
-				<div class="form-wrap__policy">
-					<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="checkbox" type="checkbox" checked="checked"/><small class="custom-input__text text-secondary">Согласен на обработку и хранение моих персональных данных в соответствии с условиями</small>
-					</label>
-				</div>
-			</form>
+		<div class="h4">Вы действительно хотите удалить?</div>
+		<p>Это действие будет выполнено безвозвратно.</p>
+		<div class="row">
+			<div class="col-md">
+				<a class="modal-win__btn btn btn-accent" href="#">Отмена
+				</a>
+			</div>
+			<div class="col-md">
+				<a class="modal-win__btn btn btn-light" href="#">Удалить
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
-<!-- #modal-call-->
+<!-- #modal-delete-->
+<div id="modal-dublicate" style="display: none">
+	<div class="modal-win">
+		<div class="h4">Подтвердите дубликат</div>
+		<p>Выберите вложенные разделы которые также нужно дублировать.</p>
+		<div class="modal-win__inputs-row row">
+			<div class="col-6">
+				<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="dublicate" type="checkbox"/><span class="custom-input__text form-check-label">Дома</span>
+				</label>
+			</div>
+			<div class="col-6">
+				<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="dublicate" type="checkbox"/><span class="custom-input__text form-check-label">Квартиры</span>
+				</label>
+			</div>
+			<div class="col-6">
+				<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="dublicate" type="checkbox"/><span class="custom-input__text form-check-label">Подъезды</span>
+				</label>
+			</div>
+			<div class="col-6">
+				<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="dublicate" type="checkbox"/><span class="custom-input__text form-check-label">Помещения</span>
+				</label>
+			</div>
+			<div class="col-6">
+				<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="dublicate" type="checkbox"/><span class="custom-input__text form-check-label">Этажи</span>
+				</label>
+			</div>
+			<div class="col-6">
+				<label class="custom-input form-check"><input class="custom-input__input form-check-input" name="dublicate" type="checkbox"/><span class="custom-input__text form-check-label">Задачи</span>
+				</label>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md">
+				<a class="modal-win__btn btn btn-accent" href="#">Отмена
+				</a>
+			</div>
+			<div class="col-md">
+				<a class="modal-win__btn btn btn-light" href="#">Удалить
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- #modal-dublicate-->
 <!-- end modals-->
